--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -25,38 +25,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import the choice function of the random module\n",
     "# https://stackoverflow.com/questions/306400/how-to-randomly-select-an-item-from-a-list\n",
+    "import random \n",
     "\n",
     "# Assign to a list the 3 possible options: 'stone', 'paper' or 'scissors'.\n",
     "\n",
+    "game = ['pierre','feuille','ciseaux']\n",
+    "\n",
+    "#print(random.choice(game))\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
+    "\n",
+    "max_game = 5\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
     "\n",
-    "# Define a function that randomly returns one of the 3 options.\n",
-    "# This will correspond to the play of the machine. Totally random.\n",
+    "win_game = 3\n",
     "\n",
+    "# Define a function that randomly returns one of the 3 options.\n",
+    "# This will correspond to the play of the machine. Total\n",
+    "\n",
+    "def machine():\n",
+    "    choix = random.choice(game)\n",
+    "    return choix\n",
     "\n",
     "# Define a function that asks your choice: 'stone', 'paper' or 'scissors'\n",
     "# you should only allow one of the 3 options. This is defensive programming.\n",
     "# If it is not stone, paper or scissors keep asking until it is.\n",
     "\n",
+    "def player_h():\n",
+    "    valeur = input()\n",
+    "    \n",
+    "    while valeur not in game:\n",
+    "        valeur = input() \n",
+    "        \n",
+    "    return valeur\n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
     "\n",
+    "def combat(machine_move, player_move):\n",
+    "    \n",
+    "    if machine_move==player_move: \n",
+    "        return 0\n",
+    "    \n",
+    "    if machine_move=='pierre':\n",
+    "        if player_move=='feuille':\n",
+    "            return 2\n",
+    "        else:\n",
+    "            return 1\n",
+    "    elif machine_move=='feuille':\n",
+    "        if player_move=='pierre':\n",
+    "            return 1\n",
+    "        else:\n",
+    "            return 2\n",
+    "    else:\n",
+    "        if player_move=='pierre':\n",
+    "            return 2\n",
+    "        else:\n",
+    "            return 1\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "print(\"\")\n",
     "    \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
     "\n",
+    "def show(machine_move,player_move):\n",
+    "    \n",
+    "    print('\\nChoix machine:',machine_move)\n",
+    "    print('Choix humain:',player_move)\n",
+    "    \n",
+    "    resultat = combat(machine_move,player_move)\n",
+    "    if resultat==0: print('Egalité')\n",
+    "    elif resultat==1: print('Machine gagne')\n",
+    "    else: print('Humain gagne')\n",
+    "    print('\\n')\n",
+    "        \n",
+    "    return resultat\n",
+    "    \n",
+    "    \n",
     "    \n",
     "# Create two variables that accumulate the wins of each participant\n",
+    "\n",
+    "wins_human = 0\n",
+    "wins_machine = 0\n",
     "\n",
     "\n",
     "# Create a loop that iterates while no player reaches the minimum of wins\n",
@@ -64,10 +123,33 @@
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
     "\n",
+    "n_games = 0\n",
+    "game_over = False\n",
+    "while n_games<max_game and not game_over:\n",
+    "    \n",
+    "    n_games += 1\n",
+    "    \n",
+    "    player_move = player_h()\n",
+    "    machine_move = machine()\n",
+    "    \n",
+    "    resultat = show(machine_move,player_move)\n",
+    "    \n",
+    "    if resultat==1: wins_machine += 1\n",
+    "    elif resultat==2: wins_human += 1\n",
+    "        \n",
+    "    if wins_machine==win_game or wins_human==win_game: \n",
+    "        game_over = True\n",
+    "        print('\\nPartie terminée')\n",
     "\n",
     "    \n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
-    "  "
+    "  \n",
+    "if wins_machine > wins_human and wins_machine >= win_game:\n",
+    "    print('\\nLa machine gagne.')\n",
+    "elif wins_human > wins_machine and wins_human >= win_game:\n",
+    "    print('\\nL\\'humain gagne.')\n",
+    "else: \n",
+    "    print('\\nIl y a égalité.')"
    ]
   },
   {
@@ -171,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
