--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -49,26 +49,118 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assign 0 to each variable that stores the victories\n"
+    "# Assign 0 to each variable that stores the victories\n",
+    "gandalf = [10,11,13,30,22,11,10,33,22,22]\n",
+    "saruman = [23,66,12,43,12,10,44,23,12,17]\n",
+    "\n",
+    "score_g = 0\n",
+    "score_s = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saruman remporte la manche.\n",
+      "Saruman remporte la manche.\n",
+      "Gandalf remporte la manche.\n",
+      "Saruman remporte la manche.\n",
+      "Gandalf remporte la manche.\n",
+      "Gandalf remporte la manche.\n",
+      "Saruman remporte la manche.\n",
+      "Gandalf remporte la manche.\n",
+      "Gandalf remporte la manche.\n",
+      "Gandalf remporte la manche.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Execution of spell clashes\n"
+    "# Execution of spell clashes\n",
+    "gandalf = [10,11,13,30,22,11,10,33,22,22]\n",
+    "saruman = [23,66,12,43,12,10,44,23,12,17]\n",
+    "\n",
+    "score_g = 0\n",
+    "score_s = 0\n",
+    "\n",
+    "for i in range(len(gandalf)): # for i in [0,1,2,3,4,5,6,7,8,9]:\n",
+    "\n",
+    "\tif gandalf[i] > saruman[i]: \n",
+    "\t\tscore_g += 1 # score_g = score_g + 1 \n",
+    "\t\tprint('Gandalf remporte la manche.')\n",
+    "\n",
+    "\telif saruman[i] > gandalf[i]: \n",
+    "\t\tscore_s += 1\n",
+    "\t\tprint('Saruman remporte la manche.')\n",
+    "\n",
+    "\telse:\n",
+    "\t\tprint('Egalité pour cette manche.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saruman remporte 1 manche\n",
+      "Saruman remporte 2 manche\n",
+      "Gandalf remporte 1 manche\n",
+      "Saruman remporte 3 manche\n",
+      "Gandalf remporte 2 manche\n",
+      "Gandalf remporte 3 manche\n",
+      "Saruman remporte 4 manche\n",
+      "Gandalf remporte 4 manche\n",
+      "Gandalf remporte 5 manche\n",
+      "Gandalf remporte 6 manche\n",
+      "Gandalf gagne.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# We check who has won, do not forget the possibility of a draw.\n",
     "# Print the result based on the winner.\n",
+    "\n",
+    "gandalf = [10,11,13,30,22,11,10,33,22,22]\n",
+    "saruman = [23,66,12,43,12,10,44,23,12,17]\n",
+    "\n",
+    "score_g = 0\n",
+    "score_s = 0\n",
+    "\n",
+    "for i in range(len(gandalf)): # for i in [0,1,2,3,4,5,6,7,8,9]:\n",
+    "\n",
+    "\tif gandalf[i] > saruman[i]: \n",
+    "\t\tscore_g += 1 # score_g = score_g + 1 \n",
+    "\t\tprint('Gandalf remporte',score_g,'manche')\n",
+    "\n",
+    "\telif saruman[i] > gandalf[i]: \n",
+    "\t\tscore_s += 1\n",
+    "\t\tprint('Saruman remporte',score_s,'manche')\n",
+    "\n",
+    "\telse:\n",
+    "\t\tprint('Egalité pour cette manche.')\n",
+    "\t#\tscore_g += 1\n",
+    "\t# score_s += 1\n",
+    "\n",
+    "\n",
+    "if score_g > score_s: \n",
+    "\tprint('Gandalf gagne.')\n",
+    "\n",
+    "elif score_s > score_g: \n",
+    "\tprint('Saruman gagne.')\n",
+    "\n",
+    "else: \n",
+    "\tprint('Egalité')\n",
+    "\n",
+    "print(\"\")\n",
     "\n"
    ]
   },
@@ -144,46 +236,90 @@
    "outputs": [],
    "source": [
     "# Assign spell power lists to variables\n",
+    "score_g = 0\n",
+    "score_s = 0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gandalf remporte la manche\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. A sorcerer wins if he succeeds in winning 3 spell clashes in a row.\n",
+    "# Execution of spell clashes\n",
+    "# check for 3 wins in a row\n",
+    "# check the winner\n",
+    "POWER = {\n",
+    "    'Fireball': 50, \n",
+    "    'Lightning bolt': 40, \n",
+    "    'Magic arrow': 10, \n",
+    "    'Black Tentacles': 25, \n",
+    "    'Contagion': 45\n",
+    "}\n",
+    "\n",
+    "gandalf = ['Fireball', 'Lightning bolt', 'Lightning bolt', 'Magic arrow', 'Fireball', \n",
+    "           'Magic arrow', 'Lightning bolt', 'Fireball', 'Magic arrow', 'Fireball']\n",
+    "saruman = ['Contagion', 'Contagion', 'Black Tentacles', 'Fireball', 'Black Tentacles', \n",
+    "           'Lightning bolt', 'Magic arrow', 'Contagion', 'Magic arrow', 'Magic arrow']\n",
+    "\n",
+    "n_gandalf = 0\n",
+    "n_saruman = 0\n",
+    "\n",
+    "for i in range(len(gandalf)):\n",
+    "\tif POWER [gandalf [i]] > POWER [saruman[i]]:\n",
+    "\t \tn_gandalf += 1\n",
+    "\t \tn_saruman = 0\n",
+    "\n",
+    "\telif POWER[gandalf[i]]< POWER [saruman[i]]: \n",
+    "\t \tn_saruman += 1\n",
+    "\t \tn_gandalf = 0 \n",
+    "\n",
+    "\tif n_gandalf == 3:\n",
+    "\t\tprint(\"gandalf remporte la manche\")\n",
+    "\tif n_saruman == 3: \n",
+    "\t\tprint(\"saruman remporte la manche\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 2. A sorcerer wins if he succeeds in winning 3 spell clashes in a row.\n",
-    "\n",
-    "\n",
-    "# Execution of spell clashes\n",
-    "\n",
-    "\n",
-    "\n",
-    "# check for 3 wins in a row\n",
-    "\n",
-    "\n",
-    "# check the winner\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 3. Average of each of the spell lists.\n",
-    "\n"
+    "import math\n",
+    "liste = [10,11,13,30,22,11,10,33,22,22]\n",
+    "somme = sum(liste)\n",
+    "avg = somme / len(liste)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 4. Standard deviation of each of the spell lists.\n",
-    "\n"
+    "import math\n",
+    "liste = [10,11,13,30,22,11,10,33,22,22]\n",
+    "somme = sum(liste)\n",
+    "avg = somme / len(liste)\n",
+    "\n",
+    "std = 0\n",
+    "for nombre in liste:\n",
+    "\tstd += (nombre - avg)**2\n",
+    "std /= len(liste)\n",
+    "std = math.sqrt(std)"
    ]
   },
   {
@@ -210,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
