--- a/temperature/temperature.ipynb
+++ b/temperature/temperature.ipynb
@@ -101,33 +101,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TabError",
+     "evalue": "inconsistent use of tabs and spaces in indentation (<ipython-input-90-a3ce050b69e3>, line 30)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-90-a3ce050b69e3>\"\u001b[1;36m, line \u001b[1;32m30\u001b[0m\n\u001b[1;33m    if temperatures_C != int[i]\u001b[0m\n\u001b[1;37m                               ^\u001b[0m\n\u001b[1;31mTabError\u001b[0m\u001b[1;31m:\u001b[0m inconsistent use of tabs and spaces in indentation\n"
+     ]
+    }
+   ],
    "source": [
     "# assign a variable to the list of temperatures\n",
-    "\n",
     "# 1. Calculate the minimum of the list and print the value using print()\n",
-    "\n",
-    "\n",
     "# 2. Calculate the maximum of the list and print the value using print()\n",
-    "\n",
-    "\n",
     "# 3. Items in the list that are greater than 70ºC and print the result\n",
-    "\n",
-    "\n",
     "# 4. Calculate the mean temperature throughout the day and print the result\n",
-    "\n",
-    "\n",
     "# 5.1 Solve the fault in the sensor by estimating a value\n",
-    "\n",
-    "\n",
     "# 5.2 Update of the estimated value at 03:00 on the list\n",
-    "\n",
-    "\n",
-    "\n",
     "# Bonus: convert the list of ºC to ºFarenheit\n",
-    "\n"
+    "#minimun = min(temperatures_C)\n",
+    "#print(\"le minimun est de \",minimun)\n",
+    "#maximum = max(temperatures_C)\n",
+    "#print(\"le maximum est de\",maximum)\n",
+    "#somme = sum(temperatures_C)\n",
+    "#mean = somme/len(temperatures_C)\n",
+    "#print(\"la moyenne est de\",mean)\n",
+    "\n",
+    "temperatures_C = [33,66,65,0,59,60,62,64,70,76,80,69,80,83,68,79,61,53,50,49,53,48,45,39]\n",
+    "\n",
+    "temperature_hot = 0\n",
+    "fahrenheit = []\n",
+    "    \n",
+    "for i in temperatures_C: \n",
+    "\tif i>70:\n",
+    "\t\ttemperature_hot +=1\n",
+    "print(\"il y a\",temperature_hot,\"elements superieur à 70°\")\n",
+    "\n",
+    "for i, temperature in enumerate(temperatures_C): \n",
+    "\tif temperature == 0: \n",
+    "\t\ttemperatures_C [i] = (temperatures_C[i-1] +temperatures_C[i+1])/2\n",
+    "        #if temperatures_C != int[i]\n",
+    "            #temperatures_C[i]= int(float[i])\n",
+    "\n",
+    "print(\"la nouvelle liste:\",temperatures_C)\n",
+    "\n",
+    "#for i, temperature in enumerate(temperatures_C): \n",
+    " #   if temperature != type(int): \n",
+    "  #      temperatures_C[i] =  \n",
+    "#print(\"la nouvelle liste:\",temperatures_C)\n",
+    "\n",
+    "fahrenheit = []\n",
+    "\n",
+    "# modifier un float en entier ex : int(float(\"42.97\"))\n",
+    "\n",
+    "\n",
+    "#def convert_l(temperatures_C): \n",
+    " #   for i, nombre in enumerate(temperatures_C): \n",
+    "  #      temperatures_C[i]= float(nombre)\n",
+    "   # return temperatures_C\n",
+    "\n",
+    "#temperature_float = conver_l(temperatures_C)\n",
+    "\n",
+    "\n",
+    "#print(\"temperature_float=\",temperatures_C)\n",
+    "\n",
+    "#for i, temperature in enumerate(temperatures_C): \n",
+    " #   if temperature >= 0:\n",
+    "  #      temperatures_C = temperatures_C[i]*1.8 + 32\n",
+    "#print(\"En fahrenheit =\",temperatures_C)\n"
    ]
   },
   {
@@ -144,12 +188,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "il y a True\n"
+     ]
+    }
+   ],
    "source": [
     "# Print True or False depending on whether you would change the cooling system or not\n",
-    "\n"
+    "liste = [33, 66, 65, 62.0, 59, 60, 62, 64, 70, 76, 80, 69, 80, 83, 68, 79, 61, 53, 50, 49, 53, 48, 45, 39]\n",
+    "temperature_h = 0\n",
+    "\n",
+    "error = False\n",
+    "\n",
+    "for i, temperature in enumerate(liste):\n",
+    "    if temperature >=70:\n",
+    "        temperature_h +=1\n",
+    "        if temperature_h >=4:\n",
+    "            error = True\n",
+    "            \n",
+    "    if temperature >=80:\n",
+    "        error = True\n",
+    "         \n",
+    "    if sum(liste)/len(liste)>65:\n",
+    "        error = True\n",
+    "    \n",
+    "print(\"il y a\",error) \n",
+    "    \n",
+    "    \n"
    ]
   },
   {
@@ -165,27 +236,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "les positions ou la temperatures est supérieurs à 70° sont: [8, 9, 10, 12, 13, 15]\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. We want the hours (not the temperatures) whose temperature exceeds 70ºC\n",
-    "\n"
+    "liste = [33, 66, 65, 62.0, 59, 60, 62, 64, 70, 76, 80, 69, 80, 83, 68, 79, 61, 53, 50, 49, 53, 48, 45, 39]\n",
+    "position = []\n",
+    "for i, temp in enumerate(liste): \n",
+    "    if temp >=70:\n",
+    "        position.append(i)\n",
+    "        \n",
+    "print(\"les positions ou la temperatures est supérieurs à 70° sont:\",position)\n",
+    "        \n",
+    "        \n",
+    "     \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "est-ce consécutif? False\n",
+      "il y a  0 heures consécutives ou la temperature est supérieur a 70° pendant 4 heures\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Condition that those hours are more than 4 consecutive and consecutive, not simply the sum of the whole set. Is this condition met?\n",
-    "\n"
+    "liste_p = [8, 9, 10, 12, 13, 15]\n",
+    "liste_c = range(8,15)\n",
+    "equal = 0\n",
+    "n_equal = 0\n",
+    "consecutif = False\n",
+    "for i in range(len(liste_p)): \n",
+    "    if liste_p[i]==liste_c[i]: \n",
+    "        equal+=1\n",
+    "    elif liste_p[i] != liste_c[i]: \n",
+    "        equal = 0\n",
+    "        \n",
+    "    if equal >= 4: \n",
+    "        consecutif = True\n",
+    "print(\"est-ce consécutif?\", consecutif)\n",
+    "\n",
+    "print (\"il y a \", equal,\"heures consécutives ou la temperature est supérieur a 70° pendant 4 heures\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
