--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -37,7 +37,14 @@
    "outputs": [],
    "source": [
     "# variables\n",
-    "\n"
+    "\n",
+    "stops = [(in_, out), (in_, out), (in_, out), (in_, out)]\n",
+    "\n",
+    "nombre_arret = len(stops)\n",
+    "\n",
+    "nombre_de_passager = 0\n",
+    "\n",
+    "liste_n_passagers = list()\n"
    ]
   },
   {
@@ -47,7 +54,8 @@
    "outputs": [],
    "source": [
     "# 1. Calculate the number of stops.\n",
-    "\n"
+    "\n",
+    "nombre_arret = len(stops)"
    ]
   },
   {
@@ -58,7 +66,7 @@
    "source": [
     "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
     "# Each item depends on the previous item in the list + in - out.\n",
-    "\n"
+    "liste_n_passagers = list()\n"
    ]
   },
   {
@@ -68,7 +76,15 @@
    "outputs": [],
    "source": [
     "# 3. Find the maximum occupation of the bus.\n",
-    "\n"
+    "for in_,out in stops: \n",
+    "\tnombre_de_passager += in_\n",
+    "\tnombre_de_passager -= out\n",
+    "\tprint(in_,\"personnes entrent\", out,\"personnes sortent\")\n",
+    "\tprint(\"il y a\",nombre_de_passager, \"dans le bus\" )\n",
+    "\t# nombre_de_passager +=in_-out (equivalent)\n",
+    "\tliste_n_passagers.append(nombre_de_passager)\n",
+    "\n",
+    "max_n_passager = max(liste_n_passagers)\n"
    ]
   },
   {
@@ -78,6 +94,18 @@
    "outputs": [],
    "source": [
     "# 4. Calculate the average occupation. And the standard deviation.\n",
+    "import math\n",
+    "\n",
+    "somme = sum(liste_n_passagers)\n",
+    "avg = somme / len(liste_n_passagers)\n",
+    "print(\"average = \",avg)\n",
+    "\n",
+    "std = 0\n",
+    "for nombre in liste_n_passagers: #formule ecart type\n",
+    "\tstd += (nombre - avg)**2\n",
+    "std /= len(liste_n_passagers)\n",
+    "std = math.sqrt(std)\n",
+    "print(\"ecart type =\",std)\n",
     "\n"
    ]
   },
@@ -105,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
