snail&well: Add Snail and Well exercice

--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -26,15 +26,33 @@
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
-    "\n",
-    "\n",
     "# Assign 0 to the variable that represents the solution\n",
-    "\n",
-    "\n",
     "# Write the code that solves the problem\n",
+    "# Print the result with print('Days =', days)\n",
+    "\n",
+    "Well_height = 125\n",
+    "D_advance = 30\n",
+    "N_retreat = 20\n",
+    "A_Distance = D_advance - N_retreat \n",
+    "total_days = 0\n",
+    "position = 0 \n",
+    "\n",
+    "print(\"je commence mon voyage \", total_days, \" J'ai parcouru\", position ,\"sur le total \",Well_height)\n",
+    "while position<125:\n",
+    "    total_days +=1\n",
+    "\n",
+    "    # 0 = 0 + 30\n",
+    "    # 30 = 30+30\n",
+    "    # 60= 60+30\n",
+    "    position = position + D_advance \n",
+    "\n",
+    "    if position <125:\n",
+    "        position = position - N_retreat\n",
+    "    \n",
+    "    print(\"Fin de journee \", total_days, \" J'ai parcouru\", position ,\"sur le total \",Well_height)\n",
     "\n",
     "\n",
-    "# Print the result with print('Days =', days)\n"
+    "print(\"J'ai terminé mon voyage journée \", total_days, \" J'ai parcouru\", position ,\"sur le total \",Well_height)\n"
    ]
   },
   {
@@ -75,27 +93,34 @@
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
-    "\n",
-    "\n",
     "# Assign 0 to the variable that represents the solution\n",
-    "\n",
-    "\n",
     "# Write the code that solves the problem\n",
-    "\n",
-    "\n",
-    "\n",
     "# Print the result with print('Days =', days)\n",
-    "\n",
-    "\n",
     "# What is its maximum displacement in a day? And its minimum?\n",
-    "\n",
-    "\n",
-    "\n",
     "# What is its average progress?\n",
-    "\n",
-    "\n",
     "# What is the standard deviation of your displacement during the day?\n",
-    "\n"
+    "\n",
+    "Well_height = 125\n",
+    "D_advance = 0\n",
+    "N_retreat = 20\n",
+    "A_Distance = D_advance - N_retreat \n",
+    "total_days = 0\n",
+    "position = 0 \n",
+    "tableau = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "\n",
+    "print(\"je commence mon voyage \", total_days, \" J'ai parcouru\", position ,\"sur le total \",Well_height)\n",
+    "while position<125:\n",
+    "    D_advance = tableau[total_days]\n",
+    "    total_days +=1\n",
+    "\n",
+    "    position = position + D_advance \n",
+    "\n",
+    "    print(\"Fin de journee \", total_days, \" J'ai parcouru\", position ,\"sur le total \",Well_height)\n",
+    "\n",
+    "\n",
+    "print(\"J'ai terminé mon voyage journée \", total_days, \" J'ai parcouru\", position ,\"sur le total \",Well_height)\n",
+    "\n",
+    "max = max"
    ]
   },
   {
