temperature: Add fahrenheit conversion

--- a/temperature/temperature.ipynb
+++ b/temperature/temperature.ipynb
@@ -101,15 +101,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TabError",
-     "evalue": "inconsistent use of tabs and spaces in indentation (<ipython-input-90-a3ce050b69e3>, line 30)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-90-a3ce050b69e3>\"\u001b[1;36m, line \u001b[1;32m30\u001b[0m\n\u001b[1;33m    if temperatures_C != int[i]\u001b[0m\n\u001b[1;37m                               ^\u001b[0m\n\u001b[1;31mTabError\u001b[0m\u001b[1;31m:\u001b[0m inconsistent use of tabs and spaces in indentation\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "il y a 5 elements superieur à 70°\n",
+      "la nouvelle liste: [33, 66, 65, 62, 59, 60, 62, 64, 70, 76, 80, 69, 80, 83, 68, 79, 61, 53, 50, 49, 53, 48, 45, 39]\n",
+      "[91, 150, 149, 143, 138, 140, 143, 147, 158, 168, 176, 156, 176, 181, 154, 174, 141, 127, 122, 120, 127, 118, 113, 102]\n"
      ]
     }
    ],
@@ -142,43 +143,20 @@
     "\n",
     "for i, temperature in enumerate(temperatures_C): \n",
     "\tif temperature == 0: \n",
-    "\t\ttemperatures_C [i] = (temperatures_C[i-1] +temperatures_C[i+1])/2\n",
-    "        #if temperatures_C != int[i]\n",
-    "            #temperatures_C[i]= int(float[i])\n",
+    "\t\ttemperatures_C [i] = int((temperatures_C[i-1] +temperatures_C[i+1])/2)\n",
+    "\n",
     "\n",
     "print(\"la nouvelle liste:\",temperatures_C)\n",
     "\n",
-    "#for i, temperature in enumerate(temperatures_C): \n",
-    " #   if temperature != type(int): \n",
-    "  #      temperatures_C[i] =  \n",
-    "#print(\"la nouvelle liste:\",temperatures_C)\n",
-    "\n",
-    "fahrenheit = []\n",
-    "\n",
-    "# modifier un float en entier ex : int(float(\"42.97\"))\n",
-    "\n",
-    "\n",
-    "#def convert_l(temperatures_C): \n",
-    " #   for i, nombre in enumerate(temperatures_C): \n",
-    "  #      temperatures_C[i]= float(nombre)\n",
-    "   # return temperatures_C\n",
-    "\n",
-    "#temperature_float = conver_l(temperatures_C)\n",
-    "\n",
-    "\n",
-    "#print(\"temperature_float=\",temperatures_C)\n",
-    "\n",
-    "#for i, temperature in enumerate(temperatures_C): \n",
-    " #   if temperature >= 0:\n",
-    "  #      temperatures_C = temperatures_C[i]*1.8 + 32\n",
-    "#print(\"En fahrenheit =\",temperatures_C)\n"
+    "fahrenheit = [int(t_C*1.8 + 32) for t_C in temperatures_C]\n",
+    "print(fahrenheit)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Take the decision\n",
+    "##### Take the decision\n",
     "Remember that if the sensor detects more than 4 hours with temperatures greater than or equal to 70ºC or any temperature higher than 80ºC or the average was higher than 65ºC throughout the day, we must give the order to change the cooling system to avoid the danger of damaging the equipment:\n",
     "* more than 4 hours with temperatures greater than or equal to 70ºC\n",
     "* some temperature higher than 80ºC\n",
